src/main/webapp/modules/taxonomy/css/taxonomy.scss
.taxonomy-list {
	ul {
		margin-left: 75px;
	}
	.hidden-input {
		border: 1px white solid;
	}
    .item-wrapper.over {
    	border-bottom: 15px #cccccc solid;
    }
	.item-wrapper .command {
		margin-top: 10px;
		margin-right: 5px;
		display: none;
		float: left;
		vertical-align: middle;
	}
	.item-wrapper:hover .command {
		display: inline-block;
	}
	/* Expand / collapse chevron visibility */
	.action-list.open .bi-chevron-right {
		display: none;
	}
	.action-list.close .bi-chevron-down {
		display: none;
	}
	.item {
		margin-left: 60px;
		padding: 5px;
		border-left: #cccccc 1px solid;
		margin-bottom: 5px;
		overflow: hidden;
		.translation {
			margin-top: 12px;
		}
		.action {
			display: inline-block;
			margin-top: 5px;
			margin-left: 5px;
		}
		.action.empty {
			color: #d9534f;
		}
		.action.incomplete {
			color: #f0ad4e;
		}
		.action.complete {
			color: #5cb85c;
		}
		input {
		   	display: inline-block;
		   	width: auto;
		}
		.name {
			display: block;
			font-weight: bold;
			float: left;
		}
		.new-name input {
			color: #777777;
		}
		.translation {
		    .lang {
		    	display: inline-block;
		    	width: 18px;
		    	height: 18px;
		    	margin-right: 5px;
		    	vertical-align: middle;
		    	font-size: 0.8em;
		    	text-align: center;
		    	border-radius: 3px;
		    	border: #ccc 1px solid;
		    	background-color: #eee;
		    	i {
		    		padding-top: 3px;
		    	}
		    }
		    .label.id {
		    	color: #aaaaaa;
		   	}
		    input {
		    	width: 300px;
		    }
		}
	}
}

/* Translation detail toggle +/- visibility */
.collapse .action.open .bi-plus-circle {
	display: none;
}
.collapse .action.close .bi-dash-circle {
	display: none;
}

.edit-text {
	textarea {
		width: 95%;
		font-family: "Courier New", Courier, monospace;
	}
}

